# HPLog

./: .gitignore  CMakeLists.txt  README.md
example/: 01_console_sink.cpp  02_proto_test.cpp  03_effective_formatter_test.cpp  04_mmap_test.cpp  05_threadpool_test.cpp  06_executor_test.cpp  CMakeLists.txt
logger/: CMakeLists.txt  defer.h  log_common.h  log_handle.cpp  log_handle.h  log_msg.cpp
logger/context/: context.cpp  context.h  executor.cpp  executor.h  thread_pool.cpp  thread_pool.h
logger/formatter/: effective_formatter.cpp  effective_formatter.h  formatter.h
logger/mmap/: mmap_aux.cpp  mmap_aux.h  mmap_linux.cpp
logger/proto/: effective_msg.proto
logger/sinks/: console_sink.cpp  console_sink.h  sink.h
logger/utils/: file_util.cpp  file_util.h  sys_util.h  sys_util_linux.cpp
